src/snapshots/venial__tests__add_bounded_lifetime.snap
---
source: src/tests.rs
assertion_line: 846
expression: tokens
---
struct Hello < ' b : c + d > { a : A , b : B , }
