src/snapshots/venial__tests__add_const_param.snap
---
source: src/tests.rs
assertion_line: 826
expression: basic_type
---
Struct {
    attributes: [],
    vis_marker: None,
    _struct: Ident(
        struct,
    ),
    name: Ident(
        Hello,
    ),
    generic_params: Some(
        [
            GenericParam {
                name: "N",
                bound: Some(
                    [
                        "u32",
                    ],
                ),
            },
        ],
    ),
    where_clause: None,
    fields: Named(
        [
            NamedField {
                attributes: [],
                vis_marker: None,
                name: Ident(
                    a,
                ),
                _colon: Punct {
                    char: ':',
                    spacing: Alone,
                },
                ty: [
                    A,
                ],
            },
            NamedField {
                attributes: [],
                vis_marker: None,
                name: Ident(
                    b,
                ),
                _colon: Punct {
                    char: ':',
                    spacing: Alone,
                },
                ty: [
                    B,
                ],
            },
        ],
    ),
    _semicolon: None,
}
