src/snapshots/venial__tests__add_lifetime-3.snap
---
source: src/tests.rs
assertion_line: 689
expression: type_with_lifetime
---
Struct {
    attributes: [],
    vis_marker: None,
    name: Ident(
        Hello,
    ),
    generic_params: Some(
        [
            GenericParam {
                name: "b",
                bound: None,
            },
            GenericParam {
                name: "a",
                bound: None,
            },
            GenericParam {
                name: "A",
                bound: None,
            },
            GenericParam {
                name: "B",
                bound: None,
            },
        ],
    ),
    where_clauses: None,
    fields: Named(
        [
            NamedField {
                attributes: [],
                vis_marker: None,
                name: Ident(
                    a,
                ),
                _colon: Punct {
                    char: ':',
                    spacing: Alone,
                },
                ty: [
                    "&",
                    "'",
                    a,
                    A,
                ],
            },
            NamedField {
                attributes: [],
                vis_marker: None,
                name: Ident(
                    b,
                ),
                _colon: Punct {
                    char: ':',
                    spacing: Alone,
                },
                ty: [
                    B,
                ],
            },
        ],
    ),
    _semicolon: None,
}
