src/snapshots/venial__tests__add_lifetime.snap
---
source: src/tests.rs
assertion_line: 741
expression: basic_type
---
Struct {
    attributes: [],
    vis_marker: None,
    _struct: Ident(
        struct,
    ),
    name: Ident(
        Hello,
    ),
    generic_params: Some(
        [
            GenericParam {
                name: "b",
                bound: None,
            },
        ],
    ),
    where_clause: None,
    fields: Named(
        [
            NamedField {
                attributes: [],
                vis_marker: None,
                name: Ident(
                    a,
                ),
                _colon: Punct {
                    char: ':',
                    spacing: Alone,
                },
                ty: [
                    A,
                ],
            },
            NamedField {
                attributes: [],
                vis_marker: None,
                name: Ident(
                    b,
                ),
                _colon: Punct {
                    char: ':',
                    spacing: Alone,
                },
                ty: [
                    B,
                ],
            },
        ],
    ),
    _semicolon: None,
}
