src/snapshots/venial__tests__add_ty_param-2.snap
---
source: src/tests.rs
assertion_line: 868
expression: tokens
---
struct Hello < A , B , T > { a : A , b : B , }
