src/snapshots/venial__tests__add_ty_param.snap
---
source: src/tests.rs
assertion_line: 717
expression: basic_type
---
Struct {
    attributes: [],
    vis_marker: None,
    name: Ident(
        Hello,
    ),
    generic_params: Some(
        [
            GenericParam {
                name: "T",
                bound: None,
            },
        ],
    ),
    where_clauses: None,
    fields: Named(
        [
            NamedField {
                attributes: [],
                vis_marker: None,
                name: Ident(
                    a,
                ),
                ty: [
                    A,
                ],
            },
            NamedField {
                attributes: [],
                vis_marker: None,
                name: Ident(
                    b,
                ),
                ty: [
                    B,
                ],
            },
        ],
    ),
}
