src/snapshots/venial__tests__add_where_item-2.snap
---
source: src/tests.rs
assertion_line: 790
expression: type_with_args
---
Struct {
    attributes: [],
    vis_marker: None,
    name: Ident(
        Hello,
    ),
    generic_params: Some(
        [
            GenericParam {
                name: "A",
                bound: None,
            },
            GenericParam {
                name: "B",
                bound: None,
            },
        ],
    ),
    where_clauses: Some(
        [
            [
                A,
                ":",
                Clone,
            ],
            [
                B,
                ":",
                Clone,
            ],
            [
                Self,
                ":",
                Sized,
            ],
        ],
    ),
    fields: Named(
        [
            NamedField {
                attributes: [],
                vis_marker: None,
                name: Ident(
                    a,
                ),
                ty: [
                    A,
                ],
            },
            NamedField {
                attributes: [],
                vis_marker: None,
                name: Ident(
                    b,
                ),
                ty: [
                    B,
                ],
            },
        ],
    ),
}
