src/snapshots/venial__tests__interpret_ty_expr_from_declarative_macro.snap
---
source: src/tests.rs
expression: path
---
Path {
    segments: [
        PathSegment {
            ident: Ident(
                path,
            ),
        },
        PathSegment {
            tk_separator_colons: "::",
            ident: Ident(
                to,
            ),
        },
        PathSegment {
            tk_separator_colons: "::",
            ident: Ident(
                Type,
            ),
        },
    ],
}
